tests/correct/space_separated_string.py
def foo(x):
    x = "hello " "world"
    print x
